fix header alignment issues, modify dropdown to be responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
 header nav {
-    height: 46px;
+    height: 60px;
     background: fixed;
-    background-color: #056a40;
+    background-color: #95cb3f;
     border-radius: 1%;
 }
 
